Code cleanup and warnings fixes
Thanks to Im-Dex
Something taken from commits
https://github.com/Im-dex/xray-162/commit/6632fece4c6cf56e6d7c679a3099106c61048ff4
https://github.com/Im-dex/xray-162/commit/62639aa6e1fee0b478fe2b523733f42eb3beffea

--- a/src/xrCore/xrCore.vcxproj
+++ b/src/xrCore/xrCore.vcxproj
@@ -591,6 +591,9 @@
     <None Include="Debug\DXTrace.inl" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Externals\BugTrap.vcxproj">
+      <Project>{e8cf1ada-264a-4127-86c2-fd7057d3792c}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\..\Externals\cryptlib.vcxproj">
       <Project>{c39f4b46-6e89-4074-902e-ca57073044d2}</Project>
     </ProjectReference>
