xr_ini refactoring
BOOL to bool
LPCSTR to pcstr
and others..
Something taken from commit: https://github.com/Im-dex/xray-162/commit/ceb65185ebf3a8d481903016187746cf6f5b1aed

--- a/src/xrCore/xrCore.vcxproj
+++ b/src/xrCore/xrCore.vcxproj
@@ -430,7 +430,7 @@
     <ClCompile Include="xrMemory_subst_msvc.cpp" />
     <ClCompile Include="xrsharedmem.cpp" />
     <ClCompile Include="xrstring.cpp" />
-    <ClCompile Include="Xr_ini.cpp" />
+    <ClCompile Include="xr_ini.cpp" />
     <ClCompile Include="xr_shared.cpp" />
     <ClCompile Include="xr_trims.cpp" />
     <ClCompile Include="_compressed_normal.cpp" />
