--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "Externals/luabind"]
 	path = Externals/luabind
 	url = https://github.com/OpenXRay/luabind-deboostified.git
-[submodule "Externals/luajit"]
-	path = Externals/luajit
-	url = https://github.com/OpenXRay/LuaJIT.git
+[submodule "Externals/LuaJIT"]
+	path = Externals/LuaJIT
+	url = https://github.com/Xottab-DUTY/LuaJIT.git
 [submodule "Externals/GameSpy"]
 	path = Externals/GameSpy
 	url = https://github.com/nitrocaster/GameSpy.git
