--- a/src/editors/PPEditor/PPEditor.vcxproj
+++ b/src/editors/PPEditor/PPEditor.vcxproj
@@ -47,7 +47,7 @@
     <ClInclude Include="NoiseGen.h" />
     <ClInclude Include="single_param.h" />
     <ClInclude Include="spline.h" />
-	<ClInclude Include="stdafx.h" />
+    <ClInclude Include="stdafx.h" />
     <ClInclude Include="Unit6.h" />
     <ClInclude Include="Unit7.h" />
     <ClInclude Include="Unit8.h" />
@@ -56,11 +56,12 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{8E48F5C4-3EBB-4930-86AC-9AE6F26410FC}</ProjectGuid>
     <RootNamespace>PPEditor</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.14393.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
     <WholeProgramOptimization>true</WholeProgramOptimization>
   </PropertyGroup>
@@ -72,7 +73,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
